<resources>
    <string name="app_name">Netflix</string>
    <!--String Login-->
    <string name="et_login_email">Email ou numero de telefone</string>
    <string name="et_login_senha">Senha</string>
    <string name="bt_entrar">Entrar</string>
    <string name="tv_recuperar_senha">Recuperar senha</string>
    <string name="tv_acesso_google">O acesso esta protegido pelo Google reCAPTCHA para garantir que voce nao e um robo. Saiba mais.</string>
    <string name="tv_novo_por_aqui">Novo por aqui? Inscreva-se agora.</string>
    <!--String Cadastro-->
    <string name="tv_primeira_informacao">Informe seu email e senha para iniciar a sua assinatura</string>
    <string name="tv_criar_conta">Crie sua conta.</string>
    <string name="et_email_cadastro">Email</string>
    <string name="et_senha_cadastro">Senha</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <!--String Menu Lista Filmes Netflix-->
    <string name="menu_netflix_deslogar">Deslogar usuario</string>
    <string name="tv_descricao_witcher">O mutante Geralt e um cacador de monstros que luta para encontrar seu lugar num undo onde as pessoas, muitas vezes, sao mais perversas que as criaturas selvagens.</string>
    <string name="tv_title_witcher">The Witcher</string>
    <string name="tv_produtores_witcher">Estrelando: Henry Cavill, Anya Chalotra, Freya Allan.\nCriacao: Laren Schmidt Hissrich.</string>
    <string name="tv_mais_videos">Mais Filmes e Series</string>
</resources>