<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormCadastro">

    <Toolbar
        android:id="@+id/toolbar_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20sp"/>

    <TextView
        android:id="@+id/tv_primeira_informacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_primeira_informacao"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingEnd="45dp"/>

    <TextView
        android:id="@+id/tv_criar_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_criar_conta"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="45dp"/>

    <EditText
        android:id="@+id/et_email_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"
        android:hint="@string/et_email_cadastro"
        android:textColorHint="@color/gray"
        android:padding="20dp"
        android:background="@drawable/edit_text_cadastro"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_senha_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"
        android:hint="@string/et_senha_cadastro"
        android:textColorHint="@color/gray"
        android:padding="20dp"
        android:background="@drawable/edit_text_cadastro"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_cadastrar"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:layout_margin="20dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/et_mensagem_erro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>