<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligth_black"
    tools:context=".DetalhesFilmeWitcher">


    <Toolbar
        android:id="@+id/toolbar_detalhes_filme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_video_witcher"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detalhes_filme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_start_video_witcher"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/play"
        app:layout_constraintTop_toTopOf="@id/iv_video_witcher"
        app:layout_constraintBottom_toBottomOf="@id/iv_video_witcher"
        app:layout_constraintStart_toStartOf="@id/iv_video_witcher"
        app:layout_constraintEnd_toEndOf="@id/iv_video_witcher"/>

    <TextView
        android:id="@+id/tv_title_witcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_title_witcher"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_video_witcher"/>

    <TextView
        android:id="@+id/tv_descricao_witcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao_witcher"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_witcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_produtores_witcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_produtores_witcher"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descricao_witcher"/>

    <TextView
        android:id="@+id/tv_mais_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_mais_videos"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_produtores_witcher"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_outros_filmes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_mais_videos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>